--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,19 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/testBtn"
+        android:id="@+id/testBrotherBtn"
         android:layout_gravity="top"
         android:gravity="center"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/test" />
+        android:text="@string/test_brother" />
+
+    <Button
+        android:id="@+id/testZebraBtn"
+        android:layout_gravity="top"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/test_zebra" />
 
 </LinearLayout>
