Citizen SDK was integrated, small refactoring.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,14 @@
             android:gravity="center"
             android:text="@string/test_zebra" />
 
+        <Button
+            android:id="@+id/testCitizenBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:gravity="center"
+            android:text="@string/test_citizen" />
+
         <TextView
             android:layout_gravity="center"
             android:text="@string/brother_log_output"
