--- a/printer/src/main/res/layout/manufacturer_item.xml
+++ b/printer/src/main/res/layout/manufacturer_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical" />
 
-    <com.route4me.printer.view.BaseTextView
+    <com.radko.printer.view.BaseTextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="60dp"
